Fixed scrollbar corner colours

--- a/styles/atom.less
+++ b/styles/atom.less
@@ -10,35 +10,16 @@ atom-workspace {
 
 .scrollbars-visible-always {
 
-    // tree-view panels
-    atom-panel-container.left,
-    atom-panel-container.right {
-        /deep/::-webkit-scrollbar {
-            width: 13px;
-            height: 13px;
-        }
-        /deep/::-webkit-scrollbar-track {
-            background-color: @tree-view-background-color;
-        }
-        /deep/::-webkit-scrollbar-corner,
-        /deep/::-webkit-scrollbar-thumb {
-            background-color: lighten(@app-background-color, 2%);
-            border: 4px solid transparent;
-            &:hover {
-                background-color: lighten(@app-background-color, 4%);
-            }
-        }
-    }
-
     // general
     /deep/::-webkit-scrollbar {
-        width: 12px;
-        height: 12px;
+        width: 12px; height: 12px;
     }
     /deep/::-webkit-scrollbar-track {
         background-color: @scrollbar-background-color;
     }
-    /deep/::-webkit-scrollbar-corner,
+    /deep/::-webkit-scrollbar-corner {
+        background: transparent;
+    }
     /deep/::-webkit-scrollbar-thumb {
         border-radius: 10px;
         border: 3px solid transparent;
@@ -47,6 +28,27 @@ atom-workspace {
         &:hover {
             background-color: lighten(@scrollbar-color, 3%);
             background-clip: content-box;
+        }
+    }
+
+    // left & right panels
+    atom-panel-container.left,
+    atom-panel-container.right {
+        /deep/::-webkit-scrollbar {
+            width: 13px; height: 13px;
+        }
+        /deep/::-webkit-scrollbar-track {
+            background-color: @tree-view-background-color;
+        }
+        /deep/::-webkit-scrollbar-corner {
+            background: @tree-view-background-color;
+        }
+        /deep/::-webkit-scrollbar-thumb {
+            background-color: lighten(@app-background-color, 2%);
+            border: 4px solid transparent;
+            &:hover {
+                background-color: lighten(@app-background-color, 4%);
+            }
         }
     }
 }
